--- a/MyApp/app/src/main/res/values/strings.xml
+++ b/MyApp/app/src/main/res/values/strings.xml
@@ -8,4 +8,16 @@
     <string name="name">Name</string>
     <string name="login">Login</string>
     <string name="enter_you_name_here">Enter you name here</string>
+    <string name="title_activity_movies">Movies</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_movie_details">MovieDetails</string>
+    <string name="movie_details">Movie Details</string>
+    <string name="image_of_selected_movie">image of selected movie</string>
 </resources>
