Map with Camera's #TODO -App crashes after asking for permissions -App only displays user position after first startup

--- a/MyApp/app/src/main/res/values/strings.xml
+++ b/MyApp/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="images">images</string>
     <string name="image_of_selected_camera" />
     <string name="todo">TODO</string>
+    <string name="title_activity_location">Location</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
