Fixed connectivity issues

--- a/MyApp/app/src/main/res/values/strings.xml
+++ b/MyApp/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="camera">Street Camera</string>
     <string name="enter_you_name_here">Enter you name here</string>
     <string name="title_activity_movies">Movies</string>
+    <string name="title_activity_firebase">Firebase</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
